finished index content, need to fix scroll/overflow problem

--- a/assets/css/circles.css
+++ b/assets/css/circles.css
@@ -1,10 +1,23 @@
+.icon {
+    z-index: 2;
+    position: fixed;
+    width: 44.02px;
+    height: 43.87px;
+    top: 42px;
+    right: 42px;
+}
+
+
 .circle {
+    z-index: -1;
     position: absolute;
     border-radius: 50%;
-    opacity: 0.6;
+    opacity: 0.45;
+    filter: blur(20px);
     background: radial-gradient(50% 50% at 50% 50%, #FFEADD 27.6%, #FFFBF1 96.88%), #FFF9EF no-repeat center center fixed;
     -webkit-background-size: cover;
     background-size: cover;
+
 }
 
 .one {
